# ixgencoder

./: CMakeLists.txt  README.md  ixg.cpp  jsonParser.cpp  jsonParser.h
debian/: _copyright___  changelog  control  files  rules
includes/: gst.h  headers.h  utils.h
sample/: channel1.json
src/: CMakeLists.txt  gst.cpp  gstUtility.cpp
test/: getBitrate.cpp
